@@ -1,3 +1,5 @@
+2476.	[doc]		ARM: improve documentation for max-journal-size and
+			ixfr-from-differences. [RT #15909] [RT #18541]
 
 	--- 9.5.1b3 released ---
 
